# TutorLoop-AI

./: .gitignore  docker-compose.yml  env.example
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  env.example  fly.toml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  sealos-deployment.yaml
backend/alembic/: README  env.py
backend/alembic/versions/: 05563921952a_initial.py  7a8b9c0d1e2f_add_video_status.py  a1b2c3d4e5f6_add_user_is_active.py  b2c3d4e5f6a7_add_rooms_table.py  c3d4e5f6a7b8_add_room_stats_and_config.py  d4e5f6a7b8c9_add_interaction_indexes.py  e5f6a7b8c9d0_add_room_entry_sessions.py  f6a7b8c9d0e1_add_knowledge_edges.py  g7h8i9j0k1l2_add_node_positions.py  h8i9j0k1l2m3_add_interaction_fks_and_node_unique.py  i9j0k1l2m3n4_add_mastery_snapshot_video_progress.py
backend/app/: config.py  gateway.py  limiter.py  main.py  schemas.py
backend/app/db/: __init__.py  neo4j.py  postgres.py  vector_search.py
backend/app/models/: __init__.py  db.py
backend/app/routers/: auth.py  chat.py  courses.py  rooms.py  users.py
backend/app/services/: auth_service.py  bkt_engine.py  cache_service.py  class_report_service.py  embedding_service.py  kg_agent.py  kg_extractor.py  model_providers.py  rag_service.py  recommendation.py  recommendation_strategies.py  report_service.py  socratic_agent.py  video_service.py
backend/app/tasks/: __init__.py  jobs.py  worker.py
backend/tests/: conftest.py  load_test.py  mock_llm.py  test_auth_service.py  test_bkt_engine.py  test_class_report.py  test_config.py  test_courses_helpers.py  test_e2e_flow.py  test_gateway.py  test_jobs.py  test_kg_agent.py  test_kg_extractor.py  test_recommendation.py  test_rooms.py  test_schemas.py  test_socratic_agent.py  test_video_service.py  test_worker.py
docs/: 00_Project_Proposal_v0.0.0.md  01_PRD_v0.0.0.md  02_TechSpec_v0.0.0.md  03_Roadmap_and_Plan.md  03_Roadmap_v0.0.0.md  04_Deployment_Guide_v0.0.0.md  05_Testing_Guide_v0.0.0.md  06_Phase4_Detailed_Plan.md  07_Phase4_Execution_Sprint.md  CONTRIBUTING.md
frontend/: .dockerignore  Dockerfile  README.md  default.conf.template  env.production.example  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.js  vitest.config.js  wrangler.toml
frontend/src/: App.vue  main.js
frontend/src/api/: client.js  graph.js  reports.js  rooms.js
frontend/src/components/: ErrorBoundary.vue  MasteryRadar.vue  (+2 more)
(+18 files in other folders)
